using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class StringConts 
{
    public static string Enemies01Anim = "Enemies01State";
    public static string BossLazerAnim = "BossLazerState";
    public static string EnvironmentTag = "Environment";
    public static string Enemies02Anim = "Enemies02State";
    public static string PlayerMoveAnim = "PlayerMove";
    public static string PlayerFireAnim = "PlayerFire";
    public static string PlayerIsDead = "PlayDead";
    public static string BossSpiderAnim = "BossSpiderState";
    public static string PlayerFacingAnim = "Facing";
    public static string PlayerReload = "Reload";
}
